2008-08-10  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/spectrum/demo-audiotest.c:
	* tests/examples/spectrum/demo-osssrc.c:
	  Demo how to draw analyzer results synced to the clock.

2008-08-10  Stefan Kost  <ensonic@users.sf.net>

	* gst/level/gstlevel.c:
	  Little renaming (l -> level).

	* gst/spectrum/gstspectrum.c:
	* gst/spectrum/gstspectrum.h:
	  Also send full timestamp/duration details here.

2008-08-10  Stefan Kost  <ensonic@users.sf.net>

	* gst/level/gstlevel.c:
	* gst/level/gstlevel.h:
	  Send same timestamp/duration details as videoanalysis. This gives
	  applications better chance to sync analysis results with playback.

2008-08-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-mux.c:
	(gst_matroska_mux_handle_sink_event),
	(flac_streamheader_to_codecdata):
	We need to drop one additional buffer for FLAC as the fLaC
	marker and STREAMINFO block are merged into one buffer in the caps.

	Also don't pretend to support NEWSEGMENT events, otherwise we
	will most probably write some invalid data.

2008-08-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-mux.c: (flac_streamheader_to_codecdata),
	(gst_matroska_mux_audio_pad_setcaps):
	Add support for muxing FLAC into Matroska containers.
	Fixes bug #311586.

2008-08-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacenc.c: (gst_flac_enc_check_discont):
	Actually provide the variables required for the format string.

2008-08-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_reset),
	(gst_matroska_demux_element_send_event),
	(gst_matroska_demux_handle_seek_event), (gst_matroska_demux_loop):
	* gst/matroska/matroska-demux.h:
	Close the current segment if we're doing a non-flushing seek and send
	the close-segment and the new segment of the seek from the streaming
	thread.

2008-08-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
